# hermes.nvim

./: .busted  .gitignore  .luacov  .luarc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  \  init.lua  justfile  luacov.report.out  luacov.stats.out  output.txt  package.json  pnpm-lock.yaml  release.config.mjs  selene.toml  unit.coverage.info  vim.toml
.cargo/: config.toml
.circleci/: config.yml  get-next-version.mjs
doc/: hermes.txt
e2e/: Cargo.toml
e2e/src/: connection.rs  lib.rs  mode.rs  prompt.rs  session.rs
e2e/src/utilities/: autocommand.rs  mod.rs
lua/hermes/: binary.lua  config.lua  download.lua  init.lua  logging.lua  platform.lua  queue.lua  version.lua
plugin/: hermes.lua
scripts/: build.sh
src/: lib.rs  logging.rs
src/acp/: error.rs
src/acp/connection/: manager.rs  mod.rs  socket.rs  stdio.rs  tcp.rs
src/acp/handler/: client.rs  event.rs  message.rs  mod.rs  response.rs
src/apc/: error.rs  mod.rs
src/apc/connection/: manager.rs  mod.rs  stdio.rs
src/apc/handler/: client.rs  message.rs  mod.rs  response.rs
src/nvim/: autocommands.rs  mod.rs  producer.rs  state.rs
src/nvim/api/: authenticate.rs  cancel.rs  connect.rs  create_session.rs  disconnect.rs  list_sessions.rs  load_session.rs  mcp_servers.rs  mod.rs  prompt.rs  respond.rs  set_mode.rs  setup.rs
src/nvim/autocommands/: event.rs  mod.rs  response.rs
src/nvim/configuration/: buffer.rs  callbacks.rs  log.rs  mod.rs  permissions.rs  terminal.rs
src/nvim/parse/: available_commands.rs  communication.rs  config_option.rs  current_mode.rs  mod.rs  plan.rs  tool_call_content.rs  tool_call_update.rs
src/nvim/requests/: mod.rs  request.rs  responder.rs
src/nvim/state/: agent.rs  mod.rs
src/nvim/terminal/: manager.rs  mod.rs  signal.rs  terminal.rs
src/utilities/: file.rs  logging.rs  message_messenger.rs  mod.rs  notification_messenger.rs  nvim.rs  project.rs  prompt.rs  runtime.rs  ui.rs
src/utilities/logging/: channel.rs  file.rs  format.rs  level.rs  mod.rs
tests/: integration_test.rs  mod.rs
tests/api/: create_session.rs
tests/e2e/: Cargo.toml  opencode.json
tests/e2e/src/: binary_loading.rs  connection.rs  copilot.rs  error_handling.rs  file_system.rs  lib.rs  mock_agent_tests.rs  mode.rs  opencode.rs  prompt.rs  read_file.rs  response.rs  session.rs  setup.rs  terminal.rs
tests/e2e/src/utilities/: agent.rs  autocommand.rs  mock_agent.rs  mock_agent_handle.rs  mock_config.rs  mod.rs  test_helpers.rs
tests/integration/: Cargo.toml
tests/integration/.config/: nextest.toml
tests/integration/src/: lib.rs
tests/integration/src/acp/: mod.rs
tests/integration/src/acp/handler/: client.rs  mod.rs
tests/integration/src/helpers/: mod.rs  ui.rs
tests/integration/src/helpers/mock/: client.rs  mod.rs  request_handler.rs
tests/integration/src/nvim/: mod.rs  setup.rs  terminal.rs
tests/integration/src/nvim/api/: list_sessions.rs  mod.rs  respond.rs
tests/integration/src/request/: create_terminal.rs  handler.rs  mod.rs  permission.rs  read_file.rs  write_file.rs
tests/integration/src/responder/: mod.rs  write_file.rs
tests/integration/src/utilities/: file.rs  logging.rs  message_messenger.rs  mod.rs  notification_messenger.rs  nvim.rs  project.rs  prompt.rs  ui.rs
tests/lua/: .luacov
tests/lua/spec/: api_spec.lua  binary_spec.lua  (+10 more)
tests/parse/: annotations.rs  available_commands.rs  communication_image.rs  communication_resource.rs  communication_resource_link.rs  communication_text.rs  config_option.rs  current_mode.rs  mod.rs  plan.rs  tool_call.rs  tool_call_update.rs
(+35 files in other folders)
