[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agent-client-protocol = { version = "0.9.4", features = [
  "unstable_session_fork",
  "unstable_session_list",
  "unstable_session_model",
  "unstable_session_resume"
] }
async-trait = "0.1"
mlua = { version = "0.10", features = ["module"] }
nvim-oxi = { version = "0.6.0", features = ["libuv", "mlua", "neovim-0-11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }

[build-dependencies]
nvim-oxi = { version = "0.6.0", features = ["test", "neovim-0-11"] }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.14"
tokio-test = "0.4"
cargo-nextest	= "0.9"
mockall  = "0.14.0"
proptest = "1.10.0"
criterion = "0.8.2"
pretty_assertions = "1.4"
