# [package.metadata]
# test-threads = 1

[package]
name = "hermes-integration"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
agent-client-protocol = { version = "0.10.2", features = [
  "unstable_session_fork",
  "unstable_session_model",
  "unstable_session_resume",
  "unstable_session_usage"
] }
async-channel = "2"
async-io = "2"
async-lock = "3"
async-net = "2"
async-trait = "0.1"
blocking = "1"
hermes = { path = "../.." }
nvim-oxi = { version = "0.6.0", features = ["neovim-0-10", "test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
pretty_assertions = "1.4"
futures = "0.3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
assert_fs = "1.1"
tempfile = "3.14"
uuid = "1"
smol = "2"

[build-dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-10", "test"] }

# [profile.test]
# opt-level = 0
